feat: add basic recent feed system
