# apps/server/src/main/java/com/skkil/sync/common/util/pagination/dto/response/CursorPaginationResponse.java
@@ -1,11 +1,13 @@
 package com.skkil.sync.common.util.pagination.dto.response;
 
+import java.util.Iterator;
 import java.util.List;
 import java.util.function.Function;
 import lombok.Builder;
 
 @Builder
-public record CursorPaginationResponse<T>(PageInfo pageInfo, List<Node<T>> nodes) {
+public record CursorPaginationResponse<T>(PageInfo pageInfo, List<Node<T>> nodes)
+    implements Iterable<T> {
 
   @Builder
   public static record PageInfo(
@@ -19,11 +21,15 @@ public record CursorPaginationResponse<T>(PageInfo pageInfo, List<Node<T>> nodes
   public static record Node<T>(String cursor, T content) {}
 
   public <R> CursorPaginationResponse<R> map(Function<T, R> mapper) {
-
     return new CursorPaginationResponse<>(
         pageInfo,
         nodes.stream()
             .map(node -> new Node<>(node.cursor(), mapper.apply(node.content())))
             .toList());
+  }
+
+  @Override
+  public Iterator<T> iterator() {
+    return nodes.stream().map(Node::content).iterator();
   }
 }
