# docs/api/openapi3.yaml
@@ -536,6 +536,77 @@ paths:
                     ,\"content\":{\"id\":1,\"author\":{\"id\":1,\"name\":\"User\"\
                     },\"project\":{\"id\":1,\"name\":\"Project\"},\"content\":\"Reflection\
                     \ Content\",\"createdAt\":\"1970-01-01T00:00:00\"}}]}}"
+  /feed/recent:
+    get:
+      tags:
+      - feed
+      summary: Get Recent Feed
+      description: Get Recent Feed
+      operationId: GetRecentFeed
+      parameters:
+      - name: first
+        in: query
+        description: Number of items to return from the beginning of the list
+        required: false
+        schema:
+          type: string
+      - name: after
+        in: query
+        description: "Cursor for pagination, indicating the position after which to\
+          \ return items"
+        required: false
+        schema:
+          type: string
+      - name: last
+        in: query
+        description: Number of items to return from the end of the list
+        required: false
+        schema:
+          type: string
+      - name: before
+        in: query
+        description: "Cursor for pagination, indicating the position before which\
+          \ to return items"
+        required: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetFeedResponse"
+              examples:
+                GetRecentFeed:
+                  value: |-
+                    {
+                      "items" : {
+                        "pageInfo" : {
+                          "size" : 1,
+                          "hasNextPage" : false,
+                          "hasPreviousPage" : false,
+                          "startCursor" : "start-cursor",
+                          "endCursor" : "end-cursor"
+                        },
+                        "nodes" : [ {
+                          "cursor" : "cursor",
+                          "content" : {
+                            "id" : 1,
+                            "author" : {
+                              "id" : 1,
+                              "handle" : "user_handle",
+                              "name" : "User Name",
+                              "profileImageUrl" : "https://example.com/profile.jpg"
+                            },
+                            "content" : "This is a feed item content",
+                            "likeCount" : 10,
+                            "commentCount" : 5,
+                            "createdAt" : "2026-05-04T12:00:00"
+                          }
+                        } ]
+                      }
+                    }
   /jobs:
     get:
       tags:
@@ -1270,6 +1341,98 @@ components:
         expiresAt:
           type: string
           description: Expiration Time
+    GetFeedResponse:
+      title: GetFeedResponse
+      type: object
+      properties:
+        items:
+          required:
+          - nodes
+          - pageInfo
+          type: object
+          properties:
+            nodes:
+              type: array
+              description: Nodes
+              items:
+                required:
+                - content
+                - cursor
+                type: object
+                properties:
+                  cursor:
+                    type: string
+                    description: Node Cursor
+                  content:
+                    required:
+                    - commentCount
+                    - content
+                    - createdAt
+                    - id
+                    - likeCount
+                    type: object
+                    properties:
+                      createdAt:
+                        type: string
+                        description: Created At
+                      author:
+                        required:
+                        - handle
+                        - id
+                        - name
+                        - profileImageUrl
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                            description: Author Name
+                          handle:
+                            type: string
+                            description: Author Handle
+                          id:
+                            type: number
+                            description: Author ID
+                          profileImageUrl:
+                            type: string
+                            description: Author Profile Image URL
+                      likeCount:
+                        type: number
+                        description: Like Count
+                      id:
+                        type: number
+                        description: Feed Item ID
+                      content:
+                        type: string
+                        description: Content
+                      commentCount:
+                        type: number
+                        description: Comment Count
+                    description: Node Content
+            pageInfo:
+              required:
+              - hasNextPage
+              - hasPreviousPage
+              - size
+              type: object
+              properties:
+                size:
+                  type: number
+                  description: Page Size
+                hasNextPage:
+                  type: boolean
+                  description: Has Next Page
+                hasPreviousPage:
+                  type: boolean
+                  description: Has Previous Page
+                endCursor:
+                  type: string
+                  description: End Cursor
+                  nullable: true
+                startCursor:
+                  type: string
+                  description: Start Cursor
+                  nullable: true
+              description: Page Info
     CreateContestOccurrenceRequest:
       title: CreateContestOccurrenceRequest
       required:
